<resources>
    <string name="app_name">Food App</string>
    <string name="recipie_app">Recipie App</string>
    <string name="powered_by_hemant">Powered By:Hemant</string>
    <string name="_250">₹ 250/-</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="this_is_the_best_recipe_i_like_it_very_much_it_is_very_tasty">This is the best Recipe. I like it Very much. It is Very Tasty</string>
    <string name="pizza">Pizza</string>
    <string name="buy_now">BUY NOW</string>
    <string name="traitional_thali">Traitional Thali</string>
    <string name="_150">₹ 150</string>
    <string name="traditional_thali">Traditional_thali</string>
    <string name="traditional_thali_includes_roti_sabji_rice">Traditional Thali includes Roti,Sabji,Rice</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="create_account">Create Account</string>
    <string name="food_app_emoji">🍔 Food App</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="search_food_hint">Search food&#8230;</string>
    <string name="todays_special">Today\'s Special Offer</string>
    <string name="food_categories">Food Categories</string>
    <string name="burger">Burger</string>
    <string name="chinese">Chinese</string>
    <string name="south_indian">South Indian</string>
    <string name="desserts">Desserts</string>
    <string name="beverages">Beverages</string>
    <string name="fast_food">Fast Food</string>
    <string name="popular_foods">Popular Foods</string>
    <string name="margherita_pizza_bullet">• Margherita Pizza</string>
    <string name="veg_burger_bullet">• Veg Burger</string>
    <string name="recommended_foods">Recommended Foods</string>
    <string name="recommended_list">Chef\'s Pasta, Masala Dosa, Brownie</string>
    <string name="promo_text">Get 50% OFF on your first order!</string>
    <string name="good_morning">Good Morning,</string>
    <string name="choose_your_food">Choose your Food</string>
    <string name="checkout">Checkout</string>
    <string name="card_number">Card Number</string>
    <string name="year">Year</string>
    <string name="tap_to_change_photo">Tap to change photo</string>
    <string name="profile_information">Profile Information</string>
    <string name="email_address">Email Address</string>
    <string name="update_profile">Update Profile</string>
    <string name="security">Security</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="address">Address</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="initial_quantity">1</string>
    <string name="price_format">₹ %d</string>
    <string name="total_price_format">%1$s x %2$d = ₹ %3$d</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="app">App</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="reset_settings">Reset Settings</string>
    <string name="reset_settings_confirm">Are you sure you want to reset all settings to default?</string>
</resources>